--- a/app/src/main/res/layout/fragment_event_main.xml
+++ b/app/src/main/res/layout/fragment_event_main.xml
@@ -10,16 +10,15 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/eventBody"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="8dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="8dp">
 
                 <ImageView
                     android:id="@+id/imageView7"
@@ -64,12 +63,13 @@
                         android:text="@string/when"
                         android:textColor="@android:color/black" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:padding="4dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:padding="4dp">
 
                     <TextView
                         android:id="@+id/event_what"
@@ -123,6 +123,12 @@
                 android:text="@string/more"
                 android:textAlignment="textEnd"
                 android:textColor="@color/blue" />
+
+            <LinearLayout
+                android:id="@+id/eventBody"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
 
         </LinearLayout>
     </ScrollView>
