--- a/app/src/main/res/layout/fragment_create_poll_option.xml
+++ b/app/src/main/res/layout/fragment_create_poll_option.xml
@@ -20,10 +20,11 @@
 
         <ImageView
             android:id="@+id/btn_delete"
-            android:layout_width="64dp"
-            android:layout_height="64dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
+            android:padding="8dp"
+            app:srcCompat="@drawable/delete_icon" />
     </TableRow>
 
 </TableLayout>
