Home und Ownevents angepasst

--- a/app/src/main/res/layout/fragment_ownevents_ownevent.xml
+++ b/app/src/main/res/layout/fragment_ownevents_ownevent.xml
@@ -12,7 +12,10 @@
         android:id="@+id/textPartyname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sauf Party" />
+        android:text="Sauf Party"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +24,8 @@
         android:orientation="vertical"></LinearLayout>
 
     <LinearLayout
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:layout_width="match_parent"
         android:layout_height="155dp"
         android:layoutDirection="rtl"
@@ -54,18 +59,21 @@
                         android:id="@+id/textWho"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
                         android:text="Wer?: Ich" />
 
                     <TextView
                         android:id="@+id/textWhere"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
                         android:text="Wo?: Bierbude" />
 
                     <TextView
                         android:id="@+id/textWhen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
                         android:text="Wann?: 30.02.2117, 19 Uhr" />
                 </LinearLayout>
 
@@ -76,6 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/description"
+                android:textColor="@android:color/black"
                 android:textStyle="bold" />
 
             <TextView
@@ -83,6 +92,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="4"
+                android:textColor="@android:color/black"
                 android:text="Es gibt im Moment in diese Mannschaft, oh, einige Spieler vergessen ihnen Profi was sie sind. Ich lese nicht sehr viele Zeitungen, aber ich habe gehört viele Situationen. Erstens: wir haben nicht offensiv gespielt. Es gibt keine deutsche Mannschaft spielt offensiv und die Name offensiv wie Bayern. Letzte Spiel hatten wir in Platz drei Spitzen: Elber, Jancka und dann Zickler. Wir müssen nicht vergessen Zickler. Zickler ist eine Spitzen mehr, Mehmet eh mehr Basler. Ist klar diese Wörter, ist möglich verstehen, was ich hab gesagt? Danke. " />
 
         </LinearLayout>
