--- a/app/src/main/res/layout/fragment_home_party.xml
+++ b/app/src/main/res/layout/fragment_home_party.xml
@@ -12,7 +12,10 @@
         android:id="@+id/textPartyname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sauf Party" />
+        android:text="Sauf Party"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,6 +24,8 @@
         android:orientation="vertical"></LinearLayout>
 
     <LinearLayout
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
         android:layout_width="match_parent"
         android:layout_height="155dp"
         android:layoutDirection="rtl"
@@ -32,31 +37,28 @@
             android:orientation="vertical"
             android:paddingTop="4dp">
 
-            <ImageButton
+            <ImageView
+                android:padding="8dp"
                 android:id="@+id/btnInfo"
                 android:layout_width="62dp"
                 android:layout_height="52dp"
                 android:layout_gravity="center"
-                android:backgroundTint="#FFFFFF"
-                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/info" />
 
-            <ImageButton
+            <ImageView
+                android:padding="8dp"
                 android:id="@+id/btnThumbsUp"
-                android:layout_width="match_parent"
+                android:layout_width="62dp"
                 android:layout_height="52dp"
                 android:layout_gravity="center"
-                android:backgroundTint="#FFFFFF"
-                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/thumbsup" />
 
-            <ImageButton
+            <ImageView
+                android:padding="8dp"
                 android:id="@+id/btnThumbsDown"
-                android:layout_width="match_parent"
+                android:layout_width="62dp"
                 android:layout_height="52dp"
                 android:layout_gravity="center"
-                android:backgroundTint="#FFFFFF"
-                android:scaleType="centerCrop"
                 app:srcCompat="@drawable/thumbsdown" />
 
         </LinearLayout>
@@ -68,19 +70,19 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="64dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/imageParty"
-                    android:layout_width="match_parent"
+                    android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:layout_weight="1"
+                    android:scaleType="fitStart"
                     app:srcCompat="@mipmap/ic_launcher" />
 
                 <LinearLayout
-                    android:layout_width="255dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="5dp">
@@ -89,18 +91,21 @@
                         android:id="@+id/textWho"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
                         android:text="Wer?: Malte" />
 
                     <TextView
                         android:id="@+id/textWhere"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
                         android:text="Wo?: Bierbude" />
 
                     <TextView
                         android:id="@+id/textWhen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@android:color/black"
                         android:text="Wann?: 30.02.2117, 19 Uhr" />
                 </LinearLayout>
 
@@ -111,12 +116,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/description"
+                android:textColor="@android:color/black"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/textDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
                 android:maxLines="4"
                 android:text="Es gibt im Moment in diese Mannschaft, oh, einige Spieler vergessen ihnen Profi was sie sind. Ich lese nicht sehr viele Zeitungen, aber ich habe gehört viele Situationen. Erstens: wir haben nicht offensiv gespielt. Es gibt keine deutsche Mannschaft spielt offensiv und die Name offensiv wie Bayern. Letzte Spiel hatten wir in Platz drei Spitzen: Elber, Jancka und dann Zickler. Wir müssen nicht vergessen Zickler. Zickler ist eine Spitzen mehr, Mehmet eh mehr Basler. Ist klar diese Wörter, ist möglich verstehen, was ich hab gesagt? Danke. " />
 
