--- a/app/src/main/res/layout/fragment_ownevents_ownevent.xml
+++ b/app/src/main/res/layout/fragment_ownevents_ownevent.xml
@@ -24,12 +24,12 @@
         android:orientation="vertical"></LinearLayout>
 
     <LinearLayout
-        android:paddingStart="4dp"
-        android:paddingEnd="4dp"
         android:layout_width="match_parent"
-        android:layout_height="155dp"
+        android:layout_height="wrap_content"
         android:layoutDirection="rtl"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingEnd="4dp"
+        android:paddingStart="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="64dp"
                 android:orientation="horizontal">
 
@@ -46,11 +46,11 @@
                     android:id="@+id/imageParty"
                     android:layout_width="64dp"
                     android:layout_height="64dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0"
                     app:srcCompat="@mipmap/ic_launcher" />
 
                 <LinearLayout
-                    android:layout_width="255dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="5dp">
@@ -59,22 +59,15 @@
                         android:id="@+id/textWho"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
-                        android:text="Wer?: Ich" />
-
-                    <TextView
-                        android:id="@+id/textWhere"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
-                        android:text="Wo?: Bierbude" />
+                        android:text="Wer?: Ich"
+                        android:textColor="@android:color/black" />
 
                     <TextView
                         android:id="@+id/textWhen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
-                        android:text="Wann?: 30.02.2117, 19 Uhr" />
+                        android:text="Wann?: 30.02.2117, 19 Uhr"
+                        android:textColor="@android:color/black" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -92,8 +85,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="4"
-                android:textColor="@android:color/black"
-                android:text="Es gibt im Moment in diese Mannschaft, oh, einige Spieler vergessen ihnen Profi was sie sind. Ich lese nicht sehr viele Zeitungen, aber ich habe gehört viele Situationen. Erstens: wir haben nicht offensiv gespielt. Es gibt keine deutsche Mannschaft spielt offensiv und die Name offensiv wie Bayern. Letzte Spiel hatten wir in Platz drei Spitzen: Elber, Jancka und dann Zickler. Wir müssen nicht vergessen Zickler. Zickler ist eine Spitzen mehr, Mehmet eh mehr Basler. Ist klar diese Wörter, ist möglich verstehen, was ich hab gesagt? Danke. " />
+                android:text="Es gibt im Moment in diese Mannschaft, oh, einige Spieler vergessen ihnen Profi was sie sind. Ich lese nicht sehr viele Zeitungen, aber ich habe gehört viele Situationen. Erstens: wir haben nicht offensiv gespielt. Es gibt keine deutsche Mannschaft spielt offensiv und die Name offensiv wie Bayern. Letzte Spiel hatten wir in Platz drei Spitzen: Elber, Jancka und dann Zickler. Wir müssen nicht vergessen Zickler. Zickler ist eine Spitzen mehr, Mehmet eh mehr Basler. Ist klar diese Wörter, ist möglich verstehen, was ich hab gesagt? Danke. "
+                android:textColor="@android:color/black" />
 
         </LinearLayout>
 
