--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -138,7 +138,7 @@
 
                 <TextView
                     android:id="@+id/ZukünftigeVeranstaltung"
-                    android:layout_width="368dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
@@ -152,9 +152,11 @@
                     android:id="@+id/DeleteButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="8dp"
                     android:text="@string/nutzer_löschen"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/VergangeneVeranstaltungView" />
