--- a/app/src/main/res/layout/event_fragment_rating.xml
+++ b/app/src/main/res/layout/event_fragment_rating.xml
@@ -36,7 +36,7 @@
             android:layout_weight="1"
             android:padding="4dp"
             android:scaleType="fitStart"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/thumbsup" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -45,7 +45,7 @@
             android:layout_weight="1"
             android:padding="4dp"
             android:scaleType="fitEnd"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/thumbsdown" />
     </LinearLayout>
 
     <TextView
