--- a/app/src/main/res/layout/event_fragment_todo.xml
+++ b/app/src/main/res/layout/event_fragment_todo.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="0dp"
+    android:paddingStart="8dp"
+    android:paddingEnd="8dp">
 
     <Button
         android:id="@+id/button2"
