--- a/app/src/main/res/layout/event_expandable_fragment.xml
+++ b/app/src/main/res/layout/event_expandable_fragment.xml
@@ -9,8 +9,7 @@
     <RelativeLayout
         android:id="@+id/head"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray">
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/arrow"
@@ -33,6 +32,12 @@
             android:textColor="@android:color/black"
             android:textSize="18sp" />
     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/expandeble_divde_linde"
+        android:orientation="vertical"></LinearLayout>
 
     <LinearLayout
         android:id="@+id/body"
