--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,9 @@
     <color name="highlightPrimary">#47fe4c</color>
     <color name="highlightSecondary">#e8fc65</color>
     <color name="green">#21ff19</color>
-    <color name="blue">#2642fb</color>s
+    <color name="blue">#2642fb</color>
+    <color name="expandeble_backgroud">#f1f1f1</color>
+    <color name="expandeble_divde_linde">#bdbdbd</color>s
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
 </resources>
