--- a/app/src/main/res/layout/event_fragment_rating.xml
+++ b/app/src/main/res/layout/event_fragment_rating.xml
@@ -30,7 +30,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/profile_picture"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_weight="1"
