--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,15 +19,16 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView5"
-                    android:layout_width="110dp"
-                    android:layout_height="110dp"
+                    android:id="@+id/profile_picture"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"
                     android:layout_marginTop="8dp"
+                    android:background="@color/black"
                     android:contentDescription="@string/todo"
+                    android:scaleType="fitCenter"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@mipmap/ic_launcher" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/FirstNameText"
@@ -39,7 +40,7 @@
                     android:textColor="@android:color/black"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+                    app:layout_constraintTop_toBottomOf="@+id/profile_picture" />
 
                 <TextView
                     android:id="@+id/AdressText"
