besprochene Änderungen im Impressum

--- a/app/src/main/res/values/stringimprint.xml
+++ b/app/src/main/res/values/stringimprint.xml
@@ -4,9 +4,9 @@
     <string name="AdressText2">Campus Minden</string>
     <string name="StreetText">Artilleriestraße 9</string>
     <string name="CityText">32427 Minden</string>
-    <string name="ContactText">Ansprechpartner: </string>
-    <string name="TelText">Telefonnummer :</string>
-    <string name="EMailText">E-Mail Adresse:</string>
-    <string name="VersionText">Versionsnummer: Dionysos 0.0.0.2</string>
+    <string name="ContactText">Ansprechpartner: T-Rex</string>
+    <string name="TelText">Telefonnummer: 5607641061</string>
+    <string name="EMailText">E-Mail Adresse: arme@zukurz.de</string>
+    <string name="VersionText">Versionsnummer: Dionysos 0.2.3.2</string>
     <string name="DescriptionText">Diese App ist während eines Projekts im Fach Software Engineering entstanden.</string>
 </resources>
