Farbverlauf im Layout der Expandable View

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,7 +13,7 @@
     <color name="green">#21ff19</color>
     <color name="blue">#2642fb</color>
     <color name="expandeble_backgroud">#f1f1f1</color>
-    <color name="expandeble_divde_linde">#bdbdbd</color>s
+    <color name="expandeble_divde_linde">#4389a2</color>s
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
 </resources>
