--- a/app/src/main/res/layout/event_expandable_fragment.xml
+++ b/app/src/main/res/layout/event_expandable_fragment.xml
@@ -9,7 +9,8 @@
     <RelativeLayout
         android:id="@+id/head"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@drawable/color_gradient">
 
         <ImageView
             android:id="@+id/arrow"
@@ -35,7 +36,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="1dp"
         android:background="@color/expandeble_divde_linde"
         android:orientation="vertical"></LinearLayout>
 
