Kleine Layout Anpassungen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,11 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorAccentLogo">#903da7</color>
     <color name="black">#959595</color>
     <color name="paplacolorPrimary">#5c258d</color>
     <color name="paplacolorSecondary">#4a6997</color>
+    <color name="paplacolorSecondaryAccent">#4b679b</color>
     <color name="paplacolorThird">#4389a2</color>
     <color name="paplacolorbg">#f4f3f1</color>
     <color name="highlightPrimary">#47fe4c</color>
