--- a/app/src/main/res/layout/activity_event_main.xml
+++ b/app/src/main/res/layout/activity_event_main.xml
@@ -1,16 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="partyplaner.partyplaner.EventMainActivity">
 
-    <fragment
-        android:id="@+id/fragment2"
-        android:name="partyplaner.partyplaner.Veranstaltung.EventMainFragment"
+    <LinearLayout
+        android:id="@+id/event_holder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <fragment
+            android:id="@+id/event_fragment"
+            android:name="partyplaner.partyplaner.Veranstaltung.EventMainFragment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_event_main" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/event_loading_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/loadingColor"
+        android:orientation="horizontal"></LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        tools:layout="@layout/fragment_event_main" />
-</LinearLayout>
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="162dp" />
+</RelativeLayout>
