Teststruktur verändert und neue Tests für Kontakte

--- a/app/src/main/res/layout/fragment_all_contacts.xml
+++ b/app/src/main/res/layout/fragment_all_contacts.xml
@@ -47,6 +47,12 @@
             android:id="@+id/layout_all_single_contacts"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
     </ScrollView>
 </LinearLayout>
