--- a/app/src/main/res/layout/event_fragment_guestlist.xml
+++ b/app/src/main/res/layout/event_fragment_guestlist.xml
@@ -5,11 +5,18 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/invite_user"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Gast einladen" />
+        android:layout_height="match_parent"
+        android:padding="8dp"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/invite_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Gast einladen" />
+    </LinearLayout>
 
     <TabHost
         android:id="@+id/tabhost"
