Knopf zum Profilbearbeiten

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,7 @@
         android:orderInCategory="100"
         android:title="@string/add_event"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_edit_profile"
+        android:title="Profil bearbeiten" />
 </menu>
